--- a/docs/package.json
+++ b/docs/package.json
@@ -22,7 +22,7 @@
     "framer-motion": "^12.27.5",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
-    "vatts": "workspace:*",
+    "vatts": "^1.0.0-alpha.2",
     "postcss": "^8.5.6",
     "prismjs": "^1.30.0",
     "react": "^19.2.3",
