update package versions to 1.0.0 and change logo image source in README

--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-app",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0",
   "description": "Basic example application for Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
