update documentation and references from Nyte.js to Vatts.js, add DevIndicator component

--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-app",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.2",
   "description": "Basic example application for Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
