--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatts-framework",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.2",
   "description": "Monorepo for the Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
