--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vatts/auth",
-  "version": "1.0.0",
-  "description": "Authentication package for Nyte.js framework",
+  "version": "1.0.1-alpha.2",
+  "description": "Authentication package for Vatts.js framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "private": false,
