--- a/packages/create-vatts-app/package.json
+++ b/packages/create-vatts-app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@vatts/create-app",
-  "version": "1.3.3",
+  "name": "create-vatts-app",
+  "version": "1.0.0",
   "description": "CLI tool to create a new Vatts.js application",
   "main": "dist/index.js",
   "bin": {
-    "@vatts/create-app": "dist/index.js"
+    "create-vatts-app": "dist/index.js"
   },
   "scripts": {
     "build": "rimraf dist && tsc",
