add export script to package.json, update logo references, and optimize route loading

--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -13,7 +13,8 @@
   ],
   "scripts": {
     "start": "vatts start",
-    "dev": "vatts dev"
+    "dev": "vatts dev",
+    "export": "vatts export"
   },
   "dependencies": {
     "@vatts/auth": "workspace:*",
