--- a/docs/package.json
+++ b/docs/package.json
@@ -19,19 +19,19 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@types/prismjs": "^1.26.5",
     "autoprefixer": "^10.4.23",
-    "framer-motion": "^12.27.5",
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
-    "vatts": "^1.0.1",
     "postcss": "^8.5.6",
     "prismjs": "^1.30.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "vatts": "1.0.2-alpha.1"
   },
   "devDependencies": {
-    "@types/react": "^19.2.8",
+    "@types/react": "^19.2.9",
     "typescript": "^5.9.3"
   }
 }
