--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,8 @@
   ],
   "scripts": {
     "start": "vatts start",
-    "dev": "vatts dev"
+    "dev": "vatts dev",
+    "export": "vatts export"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -28,7 +29,7 @@
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "1.0.2-alpha.2"
+    "vatts": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
