feat: enhance metadata rendering with Apple, manifest, Open Graph, and Twitter tags; update package versions to 1.0.2

--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-app",
-  "version": "1.0.2-alpha.3",
+  "version": "1.0.2",
   "description": "Basic example application for Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
