--- a/docs/package.json
+++ b/docs/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "workspace:*"
+    "vatts": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
