--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,6 @@
     "export": "vatts export"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@types/prismjs": "^1.26.5",
     "autoprefixer": "^10.4.23",
     "framer-motion": "^12.29.0",
@@ -27,9 +26,10 @@
     "prismjs": "^1.30.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.0.4"
+    "vatts": "^1.0.5-alpha.3"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
