--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-app",
-  "version": "1.0.4",
+  "version": "1.0.5-alpha.3",
   "description": "Basic example application for Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
