--- a/packages/vatts/package.json
+++ b/packages/vatts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatts",
-  "version": "1.0.4",
+  "version": "1.0.5-alpha.3",
   "description": "Vatts.js is a high-level framework for building web applications with ease and speed. It provides a robust set of tools and features to streamline development and enhance productivity.",
   "types": "dist/index.d.ts",
   "author": "itsmuzin",
@@ -77,6 +77,7 @@
   "dependencies": {
     "@rollup/plugin-alias": "^6.0.0",
     "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-replace": "^6.0.3",
     "chokidar": "^3.6.0",
