--- a/docs/package.json
+++ b/docs/package.json
@@ -29,7 +29,7 @@
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.0.5-alpha.3"
+    "vatts": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
