--- a/packages/vatts/package.json
+++ b/packages/vatts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatts",
-  "version": "1.0.5-alpha.3",
+  "version": "1.0.5",
   "description": "Vatts.js is a high-level framework for building web applications with ease and speed. It provides a robust set of tools and features to streamline development and enhance productivity.",
   "types": "dist/index.d.ts",
   "author": "itsmuzin",
