--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "export": "vatts export"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/prismjs": "^1.26.5",
     "autoprefixer": "^10.4.23",
     "framer-motion": "^12.29.0",
