feat: update UI to monochrome theme, refactor build/error screens, and bump version to 1.1.1
- Switch all UI components (404, build, dev indicator, error modal) to a inspired monochrome palette
- Refactor build screen to use new BuildingPage React component with improved styles and logo
- Update DevIndicator and ErrorModal for consistent monochrome look and improved UX
- Adjust README logos and badges for unified branding
- Bump version to 1.1.1 across all packages and update dependencies accordingly

--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-app",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Basic example application for Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
@@ -28,7 +28,7 @@
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "workspace:*"
+    "vatts": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
