--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -28,7 +28,7 @@
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.1.1"
+    "vatts": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
