--- a/docs/package.json
+++ b/docs/package.json
@@ -30,7 +30,7 @@
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.1.1"
+    "vatts": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
