--- a/packages/vatts/package.json
+++ b/packages/vatts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatts",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "Vatts.js is a high-level framework for building web applications with ease and speed. It provides a robust set of tools and features to streamline development and enhance productivity.",
   "types": "dist/index.d.ts",
   "author": "itsmuzin",
@@ -84,6 +84,7 @@
     "commander": "^14.0.2",
     "rollup": "^4.55.2",
     "rollup-plugin-esbuild": "^6.2.1",
+    "sharp": "^0.34.5",
     "ts-loader": "9.5.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
@@ -98,6 +99,7 @@
     "@types/express": "^4.17.25",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
-    "@types/ws": "^8.18.1"
+    "@types/ws": "^8.18.1",
+    "image-size": "^2.0.2"
   }
 }
