--- a/packages/vatts/package.json
+++ b/packages/vatts/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vatts",
-  "version": "1.1.3",
+  "version": "1.1.4-alpha.9",
   "description": "Vatts.js is a high-level framework for building web applications with ease and speed. It provides a robust set of tools and features to streamline development and enhance productivity.",
   "types": "dist/index.d.ts",
   "author": "itsmuzin",
   "license": "Apache-2.0",
-  "packageManager": "pnpm@10.20.0",
+  "packageManager": "pnpm@10.28.1+sha512.7d7dbbca9e99447b7c3bf7a73286afaaf6be99251eb9498baefa7d406892f67b879adb3a1d7e687fc4ccc1a388c7175fbaae567a26ab44d1067b54fcb0d6a316",
   "keywords": [
     "vattsjs",
     "vatts",
