feat: add Vue 3 support with core components, routing, and SSR integration; update build scripts and exports for dual React/Vue SDK

--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -11,7 +11,8 @@
     "skipLibCheck": true,
     "jsx": "react-jsx",
     "moduleResolution": "node16",
-    "allowJs": true
+    "allowJs": true,
+    "types": ["vatts/global"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
