--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node"
+    // ou "node" dependendo da sua versão do TS
+  },
   "files": [],
   "references": [
     { "path": "packages/vatts"},
