--- a/packages/vatts/package.json
+++ b/packages/vatts/package.json
@@ -23,7 +23,7 @@
     "vatts": "./dist/bin/vatts.js"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && copyfiles -u 1 \"src/**/*.vue\" dist"
   },
   "exports": {
     ".": {
@@ -37,9 +37,14 @@
       "require": "./dist/api/console.js"
     },
     "./react": {
-      "types": "./dist/client/client.d.ts",
-      "import": "./dist/client/client.js",
-      "require": "./dist/client/client.js"
+      "types": "./dist/react/client.d.ts",
+      "import": "./dist/react/client.js",
+      "require": "./dist/react/client.js"
+    },
+    "./vue": {
+      "types": "./dist/vue/client.d.ts",
+      "import": "./dist/vue/client.js",
+      "require": "./dist/vue/client.js"
     },
     "./helpers": {
       "types": "./dist/helpers.d.ts",
@@ -64,13 +69,23 @@
     "express": "^4.0.0",
     "fastify": "^5.6.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "vue": "^3.5.27"
   },
   "peerDependenciesMeta": {
     "express": {
       "optional": true
     },
     "fastify": {
+      "optional": true
+    },
+    "vue": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
       "optional": true
     }
   },
@@ -80,10 +95,13 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-replace": "^6.0.3",
+    "@vue/server-renderer": "^3.5.27",
     "chokidar": "^3.6.0",
     "commander": "^14.0.2",
+    "esbuild": "^0.27.2",
     "rollup": "^4.55.2",
     "rollup-plugin-esbuild": "^6.2.1",
+    "rollup-plugin-vue": "^6.0.0",
     "sharp": "^0.34.5",
     "ts-loader": "9.5.4",
     "ts-node": "^10.9.2",
@@ -100,6 +118,11 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@types/ws": "^8.18.1",
-    "image-size": "^2.0.2"
+    "@vue/server-renderer": "^3.5.27",
+    "@vue/tsconfig": "^0.8.1",
+    "copyfiles": "^2.4.1",
+    "image-size": "^2.0.2",
+    "vue": "^3.5.27",
+    "vue-tsc": "^3.2.3"
   }
 }
