--- a/packages/vatts/tsconfig.json
+++ b/packages/vatts/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
+    "target": "ESNext",
+    "module": "ESNext",
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
@@ -12,6 +12,6 @@
     "moduleResolution": "node",
     "allowJs": true
   },
-  "include": ["src"],
+  "include": ["src", "src/**/*.vue"],
   "exclude": ["node_modules", "dist"]
 }
