feat: add Vue project scaffolding to CLI with framework-aware templates, dynamic dependencies, and improved SSR renderer; update build scripts and typings for dual React/Vue support; bump version to 1.2.0-alpha.31

--- a/packages/create-vatts-app/tsconfig.json
+++ b/packages/create-vatts-app/tsconfig.json
@@ -1,16 +1,15 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "Node16",
+    "target": "ESNext",
+    "module": "NodeNext",
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "node16",
+    "jsx": "react",
+    "moduleResolution": "nodenext",
     "allowJs": true
   },
   "include": ["src"],
