--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2020",
-    "module": "Node16",
+    "module": "NodeNext",
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
@@ -10,8 +9,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
-    "moduleResolution": "node16",
+    "moduleResolution": "nodenext",
     "allowJs": true,
+    "rewriteRelativeImportExtensions": true,
     "types": ["vatts/global"]
   },
   "include": ["src"],
