--- a/packages/create-vatts-app/package.json
+++ b/packages/create-vatts-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-vatts-app",
-  "version": "1.0.1",
+  "version": "1.1.0-alpha.1",
   "description": "CLI tool to create a new Vatts.js application",
   "main": "dist/index.js",
   "bin": {
