--- a/docs/package.json
+++ b/docs/package.json
@@ -20,7 +20,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@types/prismjs": "^1.26.5",
     "autoprefixer": "^10.4.23",
-    "framer-motion": "^12.29.0",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
     "postcss": "^8.5.6",
@@ -30,7 +30,7 @@
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.1.4-alpha.9"
+    "vatts": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
