--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-app",
-  "version": "1.2.0-alpha.31",
+  "version": "1.2.0",
   "description": "Basic example application for Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
