--- a/examples/my-vatts-app/package.json
+++ b/examples/my-vatts-app/package.json
@@ -15,7 +15,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "file:D:/Projetos/Vatts/packages/vatts/vatts-1.2.0-alpha.31.tgz",
+    "vatts": "workspace:*",
     "vue": "^3.5.27"
   },
   "devDependencies": {
