--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@vatts/auth",
-  "version": "1.2.0-alpha.31",
+  "version": "1.2.0",
   "description": "Authentication package for Vatts.js framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "private": false,
-  "author": "itsmuzin",
+  "author": "mfraz",
   "license": "Apache-2.0",
   "packageManager": "pnpm@10.20.0",
   "exports": {
