--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,7 @@
     "react"
   ],
   "scripts": {
-    "start": "vatts start",
+    "start": "vatts start -p 3001",
     "dev": "vatts dev",
     "export": "vatts export"
   },
@@ -30,7 +30,7 @@
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.2.2"
+    "vatts": "file:D:/Projetos/Vatts/packages/vatts/vatts-1.2.2.tgz"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
