feat: add live resource analyzer page; optimize build output and asset serving; enhance CSS and font styling; enable pathRouter
- Introduce ResourceAnalyzer React page for live asset inspection and performance insights
- Refactor builder for advanced chunk splitting, production optimizations, and improved cache control
- Enhance static asset serving with proper cache headers and 404 handling
- Update globals.css with custom font and dark background
- Enable pathRouter in vatts.config.ts
- Remove SessionProvider from layout files for both React and Vue
- Add @rollup/plugin-terser to dependencies for build minification
- Update dev/start scripts to use custom port
- Bump version to 1.3.0

--- a/packages/vatts/package.json
+++ b/packages/vatts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatts",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "Vatts.js is a high-level framework for building web applications with ease and speed. It provides a robust set of tools and features to streamline development and enhance productivity.",
   "types": "dist/index.d.ts",
   "author": "mfraz",
@@ -109,6 +109,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-replace": "^6.0.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@vue/server-renderer": "^3.5.27",
     "chokidar": "^3.6.0",
     "commander": "^14.0.2",
