--- a/examples/my-vatts-app/package.json
+++ b/examples/my-vatts-app/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "description": "Basic application for Vatts.js framework",
   "scripts": {
-    "start": "vatts start",
-    "dev": "vatts dev",
+    "start": "vatts start -p 3001",
+    "dev": "vatts dev -p 3001",
     "export": "vatts export"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@vatts/auth": "workspace:*",
     "autoprefixer": "^10.4.23",
     "lucide-vue-next": "^0.563.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "workspace:*",
+    "vatts": "^1.3.0",
     "vue": "^3.5.27"
   },
   "devDependencies": {
