--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basic-app",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "Basic example application for Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@vatts/auth": "workspace:*",
     "autoprefixer": "^10.4.23",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.28.1",
@@ -28,7 +27,7 @@
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "workspace:*"
+    "vatts": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^19.2.9",
