feat: add native Go optimizer and HTTP/3 proxy integration; enhance asset handling and build process
- Introduce Go-based optimizer and HTTP/3 proxy with TypeScript bindings (optimizer.go, optimizer.ts, http3.go, http3.ts)
- Add core-go package with build scripts for native binaries
- Integrate native optimizer into build process for production builds
- Update asset serving logic to support gzipped JS files and improved cache headers
- Refactor config and types to support SSL and port options
- Enhance builder.js with unique asset naming and native optimization steps
- Update package versions and workspace references for compatibility
- Add documentation for configuration file type
- Minor UI and layout adjustments for Vue and React components

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,8 +2,10 @@ packages:
   - packages/*
   - examples/*
   - docs/
+  - services/*
 
 ignoredBuiltDependencies:
   - esbuild
+  - koffi
   - sharp
   - unrs-resolver
