--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,8 @@
   "description": "Basic application for Vatts.js framework",
   "scripts": {
     "start": "vatts start",
-    "dev": "vatts dev"
+    "dev": "vatts dev",
+    "export": "vatts export"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -15,7 +16,7 @@
     "prismjs": "^1.30.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.3.0",
+    "vatts": "workspace:*",
     "vue": "^3.5.27"
   },
   "devDependencies": {
