--- a/examples/my-vatts-app/package.json
+++ b/examples/my-vatts-app/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "Basic application for Vatts.js framework",
   "scripts": {
-    "start": "vatts start -p 3001",
-    "dev": "vatts dev -p 3001",
+    "start": "vatts start",
+    "dev": "vatts dev",
     "export": "vatts export"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.3.0",
+    "vatts": "workspace:*",
     "vue": "^3.5.27"
   },
   "devDependencies": {
