--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatts-framework",
-  "version": "1.3.0",
+  "version": "1.3.1-test.3",
   "description": "Monorepo for the Vatts.js framework",
   "private": true,
   "author": "itsmuzin",
@@ -13,7 +13,7 @@
     "monorepo"
   ],
   "scripts": {
-    "build": "pnpm run clean && pnpm -r run build",
+    "build": "pnpm run clean && pnpm -r --filter \"!./services/**\" run build",
     "clean": "pnpm -r exec rimraf dist",
 
     "publish:sdk-alpha": "pnpm run version:sync && pnpm run build && pnpm -r --filter \"./packages/**\" --filter \"!create-vatts-app\" publish publish --no-git-checks --access=public --tag=test",
