--- a/packages/vatts/package.json
+++ b/packages/vatts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatts",
-  "version": "1.3.0",
+  "version": "1.3.1-test.3",
   "description": "Vatts.js is a high-level framework for building web applications with ease and speed. It provides a robust set of tools and features to streamline development and enhance productivity.",
   "types": "dist/index.d.ts",
   "author": "mfraz",
@@ -23,7 +23,7 @@
     "vatts": "./dist/bin/vatts.js"
   },
   "scripts": {
-    "build": "tsc && copyfiles -u 1 \"src/**/*.{vue,d.ts}\" dist"
+    "build": "tsc && copyfiles -u 1 \"src/**/*.{vue,d.ts}\" dist && copyfiles -f \"../../services/core-go/binaries/*.node\" dist/core-go"
   },
   "typesVersions": {
     "*": {
@@ -114,6 +114,7 @@
     "chokidar": "^3.6.0",
     "commander": "^14.0.2",
     "esbuild": "^0.27.2",
+    "koffi": "^2.15.1",
     "rollup": "^4.56.0",
     "rollup-plugin-esbuild": "^6.2.1",
     "rollup-plugin-vue": "^6.0.0",
