--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.1-test.2",
   "description": "Monorepo for the Vatts.js framework",
   "private": true,
-  "author": "itsmuzin",
+  "author": "mfraz",
   "license": "Apache-2.0",
   "packageManager": "pnpm@10.20.0",
   "keywords": [
