--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prismjs": "^1.30.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "workspace:*",
+    "vatts": "^2.0.2",
     "vue": "^3.5.27"
   },
   "devDependencies": {
