--- a/examples/basic-app/package.json
+++ b/examples/basic-app/package.json
@@ -12,6 +12,7 @@
     "react"
   ],
   "scripts": {
+    "build": "vatts build",
     "start": "vatts start",
     "dev": "vatts dev",
     "export": "vatts export"
