--- a/examples/my-vatts-app/package.json
+++ b/examples/my-vatts-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Basic application for Vatts.js framework",
   "scripts": {
+    "build": "vatts build",
     "start": "vatts start",
     "dev": "vatts dev",
     "export": "vatts export"
